tests/custom/same_name_different_class.p.expected
ERROR: line 9: function "foo" not declared
