tests/custom/same_name_different_class.p
PrOgRaM MAiNE;
clAss maIne begin
    function MainE;
        var b : boolean;
        var z : otherdude;
    begin
        ;;;;;;;;;;;;
        z.foo(b);
        foo(b);
    end
end
class blahblah begin
    function foo(z:integer); begin
        print 'hi'
    end
end
class otherDude begin
    function foo(z:boolean); begin
        print 'blah'
    end
end
.
